--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	</head>
 	<body>
-		<h1>пп4пп77777755555777771111117777777п!</h1>
+		<h1>qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq555777771111117777777п!</h1>
 
 
 		<button id="installApp">Install</button>
