--- a/index.html
+++ b/index.html
@@ -18,36 +18,20 @@
 
 		<meta name="theme-color" content="#000000">
 		<link rel="manifest" href="manifest.json">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+		<link href="bootstrap.min.css" rel="stylesheet">
+
 
 	</head>
 	<body>
-		<h1>qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq555777771111117777777п!</h1>
+		<h1>Прктков!</h1>
 
-
-		<button id="installApp">Install</button>
-
-<script type="text/javascript">
-let deferredPrompt;
-    window.addEventListener('beforeinstallprompt', (e) => {
-        deferredPrompt = e;
-    });
-
-    const installApp = document.getElementById('installApp');
-    installApp.addEventListener('click', async () => {
-        if (deferredPrompt !== null) {
-            deferredPrompt.prompt();
-            const { outcome } = await deferredPrompt.userChoice;
-            if (outcome === 'accepted') {
-                deferredPrompt = null;
-            }
-        }
-    });
-
+<script>
+window.addEventListener('load', async () => {navigator.serviceWorker.register('sw.js')})
 </script>
+
+
 
 	</body>
 	</html>
 
 
-	
