--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	</head>
 	<body>
-		<h1>Прктков!</h1>
+		<h1>Пркпрпврпарап4444тков!</h1>
 
 <script>
 window.addEventListener('load', async () => {navigator.serviceWorker.register('sw.js')})
