first committt8888899uuut

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>pwa5</title>
+		<title>Индекс</title>
 		<link rel="shortcut icon"href="favicon.ico">
 		<link rel="apple-touch-startup-image" href="icon-320x460.png">
 		<link rel="apple-touch-icon" sizes="57x57" href="icon-57x57.png">
@@ -23,7 +23,10 @@
 
 	</head>
 	<body>
-		<h1>Пркпрпврпарап4444тков!</h1>
+		<h1>Первая страница сайта.</h1>
+
+		<a href="page.html">ссылка на вторую страницу</a>
+
 
 <script>
 window.addEventListener('load', async () => {navigator.serviceWorker.register('sw.js')})
